--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-&nbsp;
+---
+layout: home
+title: Landing page
+---
+
+Is this Jekyll-ified yet?
+
+{% highlight cpp %}
+struct foo {
+    int i;
+    int j;
+};
+{% endhighlight %}
