Debugging local Jekyll/GH-pages discrepancy.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ title: Landing page
 
 Is this Jekyll-ified yet?
 
-
 {% highlight cpp %}
 struct foo {
     int i;
     int j;
 };
 {% endhighlight %}
+
+[Debug tiem!]({{ site.url }}/ninjachef/index.html)
