--- a/ninjachef/_modules/ninjachef/flavors/gcc.html
+++ b/ninjachef/_modules/ninjachef/flavors/gcc.html
@@ -57,13 +57,15 @@
 <span class="sd">        lflags (List[str])</span>
 <span class="sd">        rules (Dict[Union[str, Tuple[str, ...]], Dict[str, Any]]): A mapping of</span>
 <span class="sd">            project- or component-specific rules. Rules take the form of a ``{</span>
-<span class="sd">            &#39;defines&#39;: defs, &#39;cflags&#39;: flags, &#39;lflags&#39;: flags }`` dictionary,</span>
-<span class="sd">            where ``defs`` is a set of :class:`.str` and ``flags`` are lists of</span>
-<span class="sd">            :class:`.str` just like keyword arguments `cflags` and `lflags`. It</span>
-<span class="sd">            is possible to leave out empty entries, i.e. ``{}`` form valid</span>
-<span class="sd">            rules.</span>
+<span class="sd">            &#39;defines&#39;: defs, &#39;cflags&#39;: flags, &#39;lflags&#39;: flags, &#39;runflags&#39;: flags</span>
+<span class="sd">            }`` dictionary, where ``defs`` is a set of :class:`.str` and</span>
+<span class="sd">            ``flags`` are lists of :class:`.str` just like keyword arguments</span>
+<span class="sd">            `cflags` and `lflags`. It is possible to leave out empty entries,</span>
+<span class="sd">            i.e. ``{}`` form valid rules. See :class:`.Testsuite` for the</span>
+<span class="sd">            meaning of ``runflags`` and how multiple ``runflags`` are merged</span>
+<span class="sd">            together.</span>
 
-<span class="sd">            The keys in the mappings take the form of a :class:`.str`, when</span>
+<span class="sd">            The keys in the mapping take the form of a :class:`.str`, when</span>
 <span class="sd">            referring to a project, or of a tuple of :class:`.str` when</span>
 <span class="sd">            referring to a more specific component. The tuple will be</span>
 <span class="sd">            interpreted as it is for :class:`.Deps`.</span>
@@ -71,13 +73,14 @@
 <span class="sd">            When a component is prepared with this flavor, the `rules` will be</span>
 <span class="sd">            looked up to see if there are additional defines and flags specified</span>
 <span class="sd">            either for the project the component belongs to or or for the</span>
-<span class="sd">            component itself::</span>
+<span class="sd">            component itself. All applicable rules will be merged together. Example::</span>
 
 <span class="sd">                gcc = flavors.Gcc(…)</span>
 <span class="sd">                # Project-specific</span>
-<span class="sd">                gcc.rules[&#39;foo&#39;] = { &#39;defines&#39;: &#39;FOO&#39; }</span>
+<span class="sd">                gcc.rules[&#39;foo&#39;] = {&#39;defines&#39;: {&#39;FOO&#39;}}</span>
 <span class="sd">                # More finely-grained</span>
-<span class="sd">                gcc.rules[(&#39;foo&#39;, &#39;bar&#39;)] = { &#39;defines&#39;: &#39;BAR&#39; }</span>
+<span class="sd">                gcc.rules[(&#39;foo&#39;, &#39;bar&#39;)] = {&#39;defines&#39;: {&#39;BAR&#39;}}</span>
+<span class="sd">                # both FOO and BAR will be defined during compilation of (foo, bar)</span>
 
 <span class="sd">        resolver (Dict[str, Callable[[str], str]]): A mapping of glob-style</span>
 <span class="sd">            :class:`.str` patterns (e.g. &#39;boost_*&#39;) to callbacks. This allows</span>
@@ -114,6 +117,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">executable</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">executable</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">cflags</span>     <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">cflags</span> <span class="ow">or</span> <span class="p">[])</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">lflags</span>     <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">lflags</span> <span class="ow">or</span> <span class="p">[])</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">runflags</span>   <span class="o">=</span> <span class="p">[]</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">rules</span>      <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">resolver</span>   <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
 
@@ -125,6 +129,7 @@
         <span class="k">return</span> <span class="n">message</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">cls</span><span class="o">=</span><span class="nb">type</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__name__</span><span class="p">,</span> <span class="bp">self</span><span class="o">=</span><span class="bp">self</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Gcc.ninja_rules"><a class="viewcode-back" href="../../../auto/ninjachef.flavors.gcc.html#ninjachef.flavors.gcc.Gcc.ninja_rules">[docs]</a>    <span class="k">def</span> <span class="nf">ninja_rules</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ninja</span><span class="p">,</span> <span class="n">recipe</span><span class="p">):</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">ninja_rules</span><span class="p">(</span><span class="n">ninja</span><span class="p">,</span> <span class="n">recipe</span><span class="p">)</span>
         <span class="n">ninja</span><span class="o">.</span><span class="n">rule</span><span class="p">(</span><span class="n">recipe</span><span class="o">.</span><span class="n">rule</span><span class="p">(</span><span class="s">&#39;compile&#39;</span><span class="p">,</span> <span class="bp">self</span><span class="p">),</span>
                    <span class="n">command</span><span class="o">=</span><span class="s">&#39;{gcc} -o $out -MMD -MF $out.d -c $includes $defines{cflags} $cflags $in&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
                        <span class="n">gcc</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">executable</span><span class="p">,</span>
@@ -182,6 +187,13 @@
         <span class="k">del</span> <span class="n">variables</span><span class="p">[</span><span class="s">&#39;lib_paths&#39;</span><span class="p">]</span>
         <span class="k">return</span> <span class="n">variables</span>
 </div>
+<div class="viewcode-block" id="Gcc.runflag_variables"><a class="viewcode-back" href="../../../auto/ninjachef.flavors.gcc.html#ninjachef.flavors.gcc.Gcc.runflag_variables">[docs]</a>    <span class="k">def</span> <span class="nf">runflag_variables</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ingredient_side</span><span class="p">,</span> <span class="n">component</span><span class="p">,</span> <span class="o">*</span><span class="p">,</span> <span class="n">merge</span><span class="p">):</span>
+        <span class="n">rules</span>              <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">rules</span>
+        <span class="n">project_runflags</span>   <span class="o">=</span> <span class="n">rules</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">component</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="p">{</span><span class="s">&#39;runflags&#39;</span><span class="p">:</span> <span class="p">[]})</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s">&#39;runflags&#39;</span><span class="p">,</span> <span class="p">[])</span>
+        <span class="n">component_runflags</span> <span class="o">=</span> <span class="n">rules</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">component</span><span class="p">,</span> <span class="p">{</span><span class="s">&#39;runflags&#39;</span><span class="p">:</span> <span class="p">[]})</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s">&#39;runflags&#39;</span><span class="p">,</span> <span class="p">[])</span>
+        <span class="n">runflags</span>           <span class="o">=</span> <span class="n">merge</span><span class="p">(</span><span class="n">ingredient_side</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">runflags</span><span class="p">,</span> <span class="n">project_runflags</span><span class="p">,</span> <span class="n">component_runflags</span><span class="p">)</span>
+        <span class="k">return</span> <span class="p">{</span><span class="s">&#39;runflags&#39;</span><span class="p">:</span> <span class="n">runflags</span><span class="p">}</span> <span class="k">if</span> <span class="n">runflags</span> <span class="k">else</span> <span class="nb">dict</span><span class="p">()</span>
+</div>
 <div class="viewcode-block" id="Gcc.object_file"><a class="viewcode-back" href="../../../auto/ninjachef.flavors.gcc.html#ninjachef.flavors.gcc.Gcc.object_file">[docs]</a>    <span class="k">def</span> <span class="nf">object_file</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">path</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">path</span><span class="o">.</span><span class="n">with_suffix</span><span class="p">(</span><span class="s">&#39;.o&#39;</span><span class="p">)</span>
 </div>
@@ -223,7 +235,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2015, lucdanton.
+      &copy;2015, mickk.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 1.3.1</a>
