--- a/ninjachef/_modules/ninjachef/recipes/recipe.html
+++ b/ninjachef/_modules/ninjachef/recipes/recipe.html
@@ -43,9 +43,9 @@
 <span class="sd">Helpful things for recipe writers.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 
-<span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABCMeta</span><span class="p">,</span> <span class="n">abstractmethod</span>
+<span class="kn">from</span> <span class="nn">abc</span> <span class="kn">import</span> <span class="n">ABC</span><span class="p">,</span> <span class="n">abstractmethod</span>
 
-<div class="viewcode-block" id="Recipe"><a class="viewcode-back" href="../../../auto/ninjachef.recipes.recipe.html#ninjachef.recipes.recipe.Recipe">[docs]</a><span class="k">class</span> <span class="nc">Recipe</span><span class="p">(</span><span class="n">metaclass</span><span class="o">=</span><span class="n">ABCMeta</span><span class="p">):</span>
+<div class="viewcode-block" id="Recipe"><a class="viewcode-back" href="../../../auto/ninjachef.recipes.recipe.html#ninjachef.recipes.recipe.Recipe">[docs]</a><span class="k">class</span> <span class="nc">Recipe</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Abstract base class for recipes.</span>
 
 <span class="sd">    This is intended as a convenience for recipe writers, so that they may</span>
@@ -56,6 +56,7 @@
         <span class="n">phony</span>   <span class="o">=</span> <span class="s">&#39;phony&#39;</span>
         <span class="n">copy</span>    <span class="o">=</span> <span class="s">&#39;copy&#39;</span>
         <span class="n">copy_to</span> <span class="o">=</span> <span class="s">&#39;copy_to&#39;</span>
+        <span class="n">run</span>     <span class="o">=</span> <span class="s">&#39;run&#39;</span>
 
     <span class="n">rules</span> <span class="o">=</span> <span class="n">_Rules</span><span class="p">([</span><span class="s">&#39;compile&#39;</span><span class="p">,</span> <span class="s">&#39;link_exe&#39;</span><span class="p">,</span> <span class="s">&#39;link_lib&#39;</span><span class="p">])</span>
     <span class="sd">&quot;&quot;&quot;Supported rule names and flavor-agnostic rules.&quot;&quot;&quot;</span>
@@ -79,24 +80,32 @@
         <span class="k">pass</span>
 </div>
     <span class="nd">@abstractmethod</span>
-<div class="viewcode-block" id="Recipe.cook"><a class="viewcode-back" href="../../../auto/ninjachef.recipes.recipe.html#ninjachef.recipes.recipe.Recipe.cook">[docs]</a>    <span class="k">def</span> <span class="nf">cook</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">projs</span><span class="p">,</span> <span class="n">flavors</span><span class="p">,</span> <span class="n">default_target</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
+<div class="viewcode-block" id="Recipe.cook"><a class="viewcode-back" href="../../../auto/ninjachef.recipes.recipe.html#ninjachef.recipes.recipe.Recipe.cook">[docs]</a>    <span class="k">def</span> <span class="nf">cook</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">projs</span><span class="p">,</span> <span class="n">flavors</span><span class="p">,</span> <span class="n">ninja</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="o">*</span><span class="p">,</span> <span class="n">default_target</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Produce Ninja file directives.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            projs (Sequence[Project]):</span>
 <span class="sd">            flavors (Sequence[Flavor]):</span>
+<span class="sd">            ninja (Optional[Writer]): The :class:`.Writer` to use when emitting</span>
+<span class="sd">                directives. If unspecified, the directives will be emitted to a</span>
+<span class="sd">                :class:`.str` instead.</span>
 
 <span class="sd">        Keyword Args:</span>
 <span class="sd">            default_target (Union[None, str, Sequence[str]]): If present,</span>
-<span class="sd">                default Ninja target or targets to set. A recipe may opt to not</span>
+<span class="sd">                default Ninja target or targets to set. A recipe may opt not to</span>
 <span class="sd">                honor this request.</span>
+<span class="sd">            **kwargs: Recipes may accept additional keyword arguments, for which</span>
+<span class="sd">                behaviour is entirely recipe-specific. Non-supported arguments</span>
+<span class="sd">                should be ignored by the recipe.</span>
 
 <span class="sd">        Raises:</span>
 <span class="sd">            CyclicDependencyError: if there is a cycle in the dependencies.</span>
 <span class="sd">            DuplicateNameError: if a duplicate name was detected.</span>
 
 <span class="sd">        Returns:</span>
-<span class="sd">            str</span>
+<span class="sd">            Union[str, Writer]: Either the :class:`.Writer` that was specified</span>
+<span class="sd">                (see `ninja`), or a :class:`.str` that holds the Ninja</span>
+<span class="sd">                directives.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="k">pass</span>
@@ -169,7 +178,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2015, lucdanton.
+      &copy;2015, mickk.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 1.3.1</a>
