--- a/ninjachef/auto/ninjachef.ninja_syntax.html
+++ b/ninjachef/auto/ninjachef.ninja_syntax.html
@@ -167,7 +167,7 @@ to make configure.py&#8217;s use of it work.</p>
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2015, lucdanton.
+      &copy;2015, mickk.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 1.3.1</a>
