--- a/ninjachef/auto/ninjachef.recipes.html
+++ b/ninjachef/auto/ninjachef.recipes.html
@@ -108,7 +108,7 @@
       <div class="clearer"></div>
     </div>
     <div class="footer">
-      &copy;2015, lucdanton.
+      &copy;2015, mickk.
       
       |
       Powered by <a href="http://sphinx-doc.org/">Sphinx 1.3.1</a>
