--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 ---
 layout: master
-title: Landing page
+title: Devlog
 ---
 
-Is this Jekyll-ified yet?
+<h1>{{site.title}}</h1>
 
-{% highlight cpp %}
-struct foo {
-    int i;
-    int j;
-};
-{% endhighlight %}
-
-<ul>
-{% for post in site.posts reversed %}
-    <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-{% endfor %}
-</ul>
+<div class='posts'>
+    <ul>
+        {% for post in site.posts %}
+        <li>
+            <h5 class='post-title'><a href='{{ post.url }}'>{{ post.title }}</a></h5>
+            <span class='post-date'>{{ post.date | date_to_string }}</span>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
