Prepare about page.

--- a/index.html
+++ b/index.html
@@ -15,3 +15,9 @@ title: Devlog
         {% endfor %}
     </ul>
 </div>
+
+<!-- <hr /> -->
+
+<!-- <div id='about'> -->
+<!--     <a href='/about'>About this site.</a> -->
+<!-- </div> -->
