--- a/about.html
+++ b/about.html
@@ -3,4 +3,4 @@ layout: master
 title: About
 ---
 
-This site uses a modified <a href='http://karloespiritu.com/blackdoc'>BlackDoc</a> Jekyll theme.
+This site is made with <a href='https://jekyllrb.com'>Jekyll</a> and uses a modified <a href='http://karloespiritu.com/blackdoc'>BlackDoc</a> theme.
