--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@ title: Devlog
 
 <div id='about'>
     <!-- <a href='/about'>About this site.</a> -->
-    This site is made with <a href='https://jekyllrb.com'>Jekyll</a> and uses a modified <a href='http://karloespiritu.com/blackdoc'>BlackDoc</a> theme.
+    This site is made with <a href='https://jekyllrb.com'>Jekyll</a> and uses a modified <a href='http://code.mendhak.com/BlackDoc'>BlackDoc</a> theme.
 </div>
